# snake_gRPC

./: CMakeLists.txt  README.md  client.py  main.cpp  snake.grpc.pb.cc  snake.pb.cc  snake_pb2.py  snake_pb2_grpc.py  snake_service.cpp  snake_service.h
proto/: snake.grpc.pb.h  snake.pb.h  snake.proto
